[project]
name = "langchain-multi-agent-research-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=0.1.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "streamlit>=1.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=2.1.0",
]
